# manifolds

./: .emacs.desktop  .gitignore  .travis.yml  README.md  cabal  manifolds.cabal  sk0.hs  stack.yaml
Data/: Manifold.hs
Data/LinearMap/: HerMetric.hs
Data/List/: FastNub.hs
Data/Manifold/: PseudoAffine.hs  Simplex.hs  TreeCover.hs  Types.hs
Data/Manifold/Visualisation/R3/: GLUT.hs
Util/: LtdShow.hs
half-space/: CHANGELOG.md  half-space.cabal
half-space/Data/Monoid/: Additive.hs
manifold-random/: manifold-random.cabal
manifold-random/Data/Random/: Manifold.hs
manifolds/: manifolds.cabal
manifolds-core/: manifolds-core.cabal
manifolds-core/Math/Manifold/Core/: PseudoAffine.hs  Types.hs
manifolds-core/Math/Manifold/Core/Types/: Internal.hs
manifolds-core/Math/Manifold/VectorSpace/: Scalar.hs  ZeroDimensional.hs
manifolds/Control/Monad/Trans/: OuterMaybe.hs
manifolds/Data/: CoNat.hs  Embedding.hs  Manifold.hs  SimplicialComplex.hs
manifolds/Data/Function/: Affine.hs  Differentiable.hs
manifolds/Data/Function/Differentiable/: Data.hs
manifolds/Data/LinearMap/: Category.hs  HerMetric.hs
manifolds/Data/List/: FastNub.hs
manifolds/Data/Manifold/: Atlas.hs  Cone.hs  DifferentialEquation.hs  FibreBundle.hs  Griddable.hs  Mesh.hs  PseudoAffine.hs  Riemannian.hs  Shade.hs  TreeCover.hs  Types.hs  Web.hs  WithBoundary.hs
manifolds/Data/Manifold/Function/: Interpolation.hs  LocalModel.hs  Quadratic.hs
manifolds/Data/Manifold/Types/: Primitive.hs  Stiefel.hs
manifolds/Data/Manifold/Visualisation/R2/: Diagram.hs
manifolds/Data/Manifold/Web/: DataStructure.hs  Internal.hs
manifolds/Data/Manifold/WithBoundary/: Class.hs
manifolds/Data/SetLike/: Intersection.hs
manifolds/Data/Simplex/: Abstract.hs
manifolds/Data/VectorSpace/: FiniteDimensional.hs
manifolds/Math/Manifold/: Coordinates.hs  Homogeneous.hs
manifolds/Math/Manifold/Embedding/Simple/: Class.hs
manifolds/Math/Manifold/Real/: Coordinates.hs
manifolds/Util/: Associate.hs  LtdShow.hs
manifolds/images/examples/: simple-2d-ShadeTree.ghci
manifolds/test/: Makefile  basicTriang.hs
manifolds/test/tasty/: test.hs
presentation/: .gitignore  manifolds-presentation.cabal
presentation/icfp2018/: npfl.hs
presentation/magic2019/: FromAffineSpace.ipynb  FromVectorSpace.ipynb  PseudoAffine.hs  abstract.md
presentation/media/: MHD-example.webm
proof/elemfuns-lindevs/: LinDevFind.hs
test/: FiniteDifferences-nabla.ipynb  Interval-uncertain-function.ipynb  ODE-solution-filter.ipynb  PDE-solution-filter.ipynb  ShadeCombinations.ipynb  ShadeIntersections.ipynb  Trees-and-Webs.ipynb  TriangT.hs  WebSampling.ipynb  discretise-Diffable-Functions.ipynb  generate-ShadeTrees.ipynb
