Name:                manifolds
Version:             0.5.0.4
Category:            Math
Synopsis:            Coordinate-free hypersurfaces
Description:         Manifolds, a generalisation of the notion of &#x201c;smooth curves&#x201d; or surfaces,
                     are topological spaces /locally homeomorphic to a vector space/. This gives
                     rise to what is actually the most natural / mathematically elegant way of dealing
                     with them: calculations can be carried out locally, in connection with Riemannian
                     products etc., in a vector space, the tangent space / tangent bundle.
                     .
                     However, this does not trivially translate to non-local operations. Common
                     ways to carry those out include using a single affine map to cover (almost) all of the manifold
                     (in general not possible homeomorphically, which leads to both topological and geometrical
                     problems), to embed the manifold into a larger-dimensional vector space (which tends
                     to distract from the manifold's own properties and is often not friendly to computations)
                     or approximating the manifold by some kind of finite simplicial mesh (which intrinsically
                     introduces non-differentiability issues and leads to the question of what precision
                     is required).
                     .
                     This library tries to mitigate these problems by using Haskell's
                     functional nature to keep the representation close to the mathematical ideal of
                     local linearity with homeomorphic coordinate transforms, and, where it is
                     necessary to recede to the less elegant alternatives, exploiting lazy evaluation
                     etc. to optimise the compromises that have to be made.
License:             GPL-3
License-file:        COPYING
Author:              Justus Sagemüller
Homepage:            https://github.com/leftaroundabout/manifolds
Maintainer:          (@) jsag $ hvl.no
Build-Type:          Simple
Cabal-Version:       >=1.18
Extra-Doc-Files:     images/examples/*.png,
                     images/examples/ShadeCombinations/2Dconvolution-skewed.png
                     images/examples/TreesAndWebs/*.png
                     images/examples/DiffableFunction-plots/*.png

Source-Repository head
    type: git
    location: git://github.com/leftaroundabout/manifolds.git

Library
  Build-Depends:     base>=4.5 && < 6
                     , manifolds-core == 0.5.0.4
                     , transformers
                     , vector-space>=0.8
                     , free-vector-spaces>=0.1.5
                     , linear
                     , MemoTrie
                     , vector
                     , linearmap-category >= 0.3.4 && < 0.5
                     , spatial-rotations >= 0.1 && < 0.2
                     , containers
                     , array
                     , binary
                     , comonad
                     , free
                     , semigroups
                     , void
                     , number-show >= 0.1 && < 0.2
                     , ieee754 >= 0.8 && < 1
                     , tagged
                     , deepseq
                     , placeholders
                     , lens
                     , call-stack
                     , constrained-categories >= 0.3.1 && < 0.5
                     , pragmatic-show
                     , QuickCheck >=2.8 && <3
  other-extensions:  FlexibleInstances
                     , TypeFamilies
                     , FlexibleContexts
                     , GADTs
                     , RankNTypes
                     , ConstraintKinds
                     , PatternGuards
                     , ScopedTypeVariables
                     , RecordWildCards
                     , TupleSections
  ghc-options:       -O2
  Exposed-modules:   Data.Manifold
                     Data.Manifold.PseudoAffine
                     Data.Manifold.TreeCover
                     Data.Manifold.Shade
                     Data.Manifold.Web
                     Data.Manifold.Web.Internal
                     Data.Manifold.Mesh
                     Data.Manifold.DifferentialEquation
                     Data.Manifold.Function.LocalModel
                     Data.Manifold.Function.Interpolation
                     Data.Simplex.Abstract
                     Data.Function.Differentiable
                     Data.Function.Affine
                     Data.Manifold.Types
                     Data.Manifold.Types.Stiefel
                     Data.Manifold.Griddable
                     Data.Manifold.Atlas
                     Data.Manifold.FibreBundle
                     Data.Manifold.Riemannian
                     Math.Manifold.Real.Coordinates
                     Math.Manifold.Embedding.Simple.Class
  Other-modules:   Data.List.FastNub
                   Data.Manifold.Types.Primitive
                   Data.SetLike.Intersection
                   Data.Manifold.Cone
                   Data.Embedding
                   Data.Manifold.Function.Quadratic
                   Data.Function.Differentiable.Data
                   Control.Monad.Trans.OuterMaybe
                   Util.Associate
                   Util.LtdShow
  default-language: Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test/tasty
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , tasty >= 0.7
    , tasty-hunit
    , tasty-quickcheck
    , manifolds
    , pragmatic-show
    , containers
    , vector-space
    , linear
    , spatial-rotations
    , constrained-categories
    , linearmap-category
    , lens

